--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </li>
         <br>
     </ul>
-            Favorete foods they eat
+            Favorite foods they eat
         <ul>
         <li>
             Carrots
