--- a/index.html
+++ b/index.html
@@ -1,73 +1,45 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Project: Recipe book</title>
         <meta charset="utf-8">
-        <title>Project: Travel webpage</title>
+        <style>
+            h1 {
+                color:red;
+                font-family: cursive;
+                font-size: 58px;
+            }
+            #message {
+                color: rgb(0, 0, 255);
+                font-size:18px;
+                font-family: cursive;
+            }
+           body {
+               background-color: rgb(32, 199, 154);
+           }
+           b {
+               background-color: yellow;
+           }
+           #click {
+               color: rgb(3, 54, 6);
+               font-family: monospace;
+           }
+        </style>
     </head>
-    <style>
-        .title {
-            color: blue;
-        }
-        body {
-            background-color: rgb(67, 150, 156);
-        }
-        #info {
-            color: red;
-        }
-        #pictures {
-            color: rgb(255, 247, 0);
-        }
-        #thx {
-            background-color: rgb(255, 242, 3);
-            color: red;
-        }
-        .food {
-            background-color: yellow;
-            color: green;
-        }
-    </style>
     <body>
-            
-        <h1 class="title">Travel to the <strong>North pole</strong>.</h1>
-<img src="https://www.kasandbox.org/programming-images/seasonal/snowy-slope-with-trees.png"width="555" alt="snowy mountain">
-     <h2 id="info">
-         INFO
-     </h2>
-    <p>the north pole is a very hard place to be in, but the thing is, there’s no other experience just like it, look, truth is I’m making this so I can get better at making websites which I think would help me out a lot on the future,<br> overall I’ve never been to the <b>North pole</b> but who knows, you might enjoy it, just make sure you bring a jacket.</p> 
-    <h2 id="pictures">
-    About Reindeers
-    </h2>
-    <p>
-    Reindeer, or caribou, are primarily plant eaters that love<br> feeding on <b class="food">leafy greens</b> and <b class="food">mushrooms</b>, and on occasion, bird<br> eggs and arctic char. And though they're not available to them<br> in their natural habitat, they also love carrots and apples as a little sweet treat.<br>
+       <h1>
+           To prove you wrong
+       </h1>
+    <p id="message">
+    This is a website to prove to everyone that doubted me wrong.<br> and yes I made this website. It's me "<b>Jabriel</b>" and yes I<br> wrote code to make this possible. so there you have it, yay!<br>
     </p>
-    Here are some of the foods they eat
-    <ul>
-        <li>
-            leafy greens
-        </li>
-        <li>
-            mushrooms
-        </li>
-        <li>
-            bird eggs
-        </li>
-        <br>
-    </ul>
-            Favorite foods they eat
-        <ul>
-        <li>
-            Carrots
-        </li>
-        <li>
-            Apples
-        </li>
-        </ul>
-    <img src="https://www.kasandbox.org/programming-images/seasonal/reindeer.png"width="545" alt="reindeer wearing a saddle on the snow" border="5">
-    <img src="https://www.kasandbox.org/programming-images/seasonal/xmas-ornaments.png" width="545" border="5">
-    <img src="https://www.kasandbox.org/programming-images/seasonal/snownoes.png">
-    <p id="thx">
-      \/
-    thank you for reading my travel website.
+    <p id="click">
+    click the picture... yeah all it does is make a blank web because I don't want to send you anywhere :)
     </p>
+    <a href="_blank">
+        <img src="https://www.google.com/search?q=hard+working+picture&safe=active&client=firefox-b-1-ab&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiDqPfK1pvhAhWBdN8KHfZCDS8Q_AUIDigB&biw=1525&bih=749&dpr=0.9#imgrc=ejYJ0dz87-BB-M:" width="553">
+    </a>
+    
     </body>
 </html>
+
