--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     click the picture... yeah all it does is make a blank web because I don't want to send you anywhere :)
     </p>
     <a href="_blank">
-        <img src="https://www.google.com/search?q=hard+working+picture&safe=active&client=firefox-b-1-ab&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiDqPfK1pvhAhWBdN8KHfZCDS8Q_AUIDigB&biw=1525&bih=749&dpr=0.9#imgrc=ejYJ0dz87-BB-M:" width="553">
+        <img src="https://www.kasandbox.org/programming-images/animals/cat.png">
     </a>
     
     </body>
