--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
         <style>
             h1 {
                 color:red;
-                font-family: cursive;
+                font-family: ;
                 font-size: 58px;
             }
             #message {
                 color: rgb(0, 0, 255);
                 font-size:18px;
-                font-family: cursive;
+                font-family: ;
             }
            body {
                background-color: rgb(32, 199, 154);
